--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,23 @@
+@article{howard1960innate,
+  title={Innate and environmental dispersal of individual vertebrates},
+  author={Howard, Walter E},
+  journal={American Midland Naturalist},
+  pages={152--161},
+  year={1960},
+  publisher={JSTOR}
+}
+
+@article{pasinelli2004genetic,
+  title={Genetic and environmental influences on natal dispersal distance in a resident bird species},
+  author={Pasinelli, Gilberto and Schiegg, Karin and Walters, Jeffrey R},
+  journal={The American Naturalist},
+  volume={164},
+  number={5},
+  pages={660--669},
+  year={2004},
+  publisher={The University of Chicago Press}
+}
+
 @article{rice2003ecological,
   title={Ecological niche differentiation in the Aphelocoma jays: a phylogenetic perspective},
   author={Rice, Nathan H and Martinez-Meyer, Enrique and Peterson, A Townsend},
